<resources>
    <string name="app_name">VetClinic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_vet_description">Ветеринарная клиника My Vet в Москве ждет четвероногих пациентов и хозяев для проведения профилактических осмотров, диагностики и лечения.</string>
    <string name="clinic_hours">Часы работы:</string>
    <string name="clinic_hours_description">Пн-Вс: 10:00 - 20:00</string>
    <string name="contact_us_title">Связаться с нами:</string>
    <string name="phone_number">+7(925)930-29-21</string>
    <string name="location_title">Адрес:</string>
    <string name="moscow_address_here">Москва, Шоссейная улица, 12A</string>
    <string name="book_appointment">Записаться на приём</string>
    <string name="log_in">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="log_in_button">Войти</string>
    <string name="account_registration">Регистрация аккаунта</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="pets_name">Имя питомца</string>
    <string name="phone_number_title">Телефон</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="cancel">Отмена</string>
    <string name="dont_have_account">У меня нет аккаунта. </string>
    <string name="TV_register">Зарегистрироваться.</string>
    <string name="tv_forgorPassword">Забыли пароль?</string>
    <string name="tv_admin_login">Вход для администратора</string>
    <string name="already_have_account_string">Уже есть аккаунт?</string>
    <string name="tv_return_to_login_page">На страницу входа</string>
    <string name="company_logo">Логотип компании</string>
    <string name="doctor_s_photo">doctor\'s photo</string>
    <string name="book_app">Запись</string>
    <string name="back_button">Back button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="change_data">Изменить</string>
    <string name="tv_settings">Настройки</string>
    <string name="change_password_tv">Изменить пароль</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="pet_type">Тип питомца</string>
    <string name="gender">Пол</string>
    <string name="add_pet_capslock">ДОБАВИТЬ ПИТОМЦА</string>
    <string name="please_choose_pet_type">Пожалуйста, выберите тип питомца</string>
    <string name="please_choose_pet_gender">Пожалуйста, выберите пол питомца</string>
    <string name="please_enter_pet_name">Пожалуйста, введите имя питомца</string>
    <string name="owner_title">Владелец:</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="log_out_account">Выйти из аккаунта</string>
    <string name="deleting_account_title">Удаление профиля</string>
    <string name="enter_your_email_to_reset_password_title">Введите свой email для восстановления пароля:</string>
    <string name="enter_new_password_title">Введите новый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="update_password">Обновить пароль</string>
    <string name="appointments_are_not_available">Нет доступных приёмов</string>
    <string name="buttom_more_options">Buttom more options</string>
    <string name="button_moreoptions">Button more options</string>
    <string name="button_calendar">button_calendar</string>
    <string name="button_admin_exit">buttonAdminExit</string>
    <string name="disabled_empty_button">disabledEmptyButton</string>
    <string name="doctor_role_and_name">%s: %s</string>
    <string name="appointment_notifications">Appointment Notifications</string>
    <string name="status_scheduled">Приём назначен</string>
    <string name="status_cancelled">Приём отменён</string>
    <string name="status_completed">Приём завершён</string>
    <string name="owner_full_name">Владелец: %1$s %2$s</string>
    <string name="no_available_appointments">Нет доступных приёмов</string>
    <string name="password_updated">Пароль успешно обновлён</string>
    <string name="battery_optimization_message">Чтобы получать напоминания за час до приёма, отключите оптимизацию батареи для приложения.\n\nНажмите \"Перейти в настройки\", затем найдите пункт \"Аккумулятор\" и отключите ограничение.</string>
    <string name="pet_title_with_dots">Питомец:</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="appointments">Приемы</string>
    <string name="archive">Архив</string>
    <string name="creating_appointment">Формирование записи</string>
    <string name="time">Время:</string>
    <string name="create_appointment">Записаться</string>
    <string name="specialist">Специалист</string>
    <string name="appointment">Запись</string>
    <string name="services">Услуги</string>
    <string name="all_services">Все услуги</string>
    <string name="specialist_plural">Специалисты</string>
    <string name="profile">Профиль</string>
    <string name="pets">Питомцы</string>
    <string name="back">Назад</string>
    <string name="next_aword">Далее</string>
    <string name="send">Отправить</string>
    <string name="profile_settings">Настройка профиля</string>
    <string name="enter_phone_number">Введите номер</string>
    <string name="email_russian">Электронная почта</string>
    <string name="choose_pet_type">Выберите тип питомца</string>
    <string name="choose_pet_gender">Выберите пол питомца</string>
    <string name="birthday_date">Дата рождения</string>
    <string name="surname">Фамилия</string>
    <string name="enter_new_data">Введите новые данные:</string>
    <string name="an_error_has_occurred">К сожалению, возникла ошибка</string>
    <string name="retry">Повторить</string>
</resources>