<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:contentDescription="Логотип компании"
            android:src="@drawable/modern_pet_veterinary_clinic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/account_registration"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_patronim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pets_name"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_title"
            android:inputType="phone"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:textColorHint="@android:color/darker_gray"
            android:textColor="@android:color/black"/>


        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Уже есть аккаунт? На страницу входа"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"/>


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</ScrollView>